# Sleipnir

./: .gitignore  README.md
NavSpark-console/: setup.cfg
NavSpark-console/src/NavSpark_console/: __init__.py  main.py  protocol.py
NavSpark-console/tests/NavSpark_console/: test_protocol.py
