[metadata]
name = sleipnir-NavSpark-console-xzy3
version = attr: NavSpark_console.__version__
author_email =
description = A toy project to build an autonomous rover
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/xzy3/Sleipnir
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 2 - Pre-Alpha
    Environment :: Console :: Curses
    Framework :: AsyncIO
    Intended Audience :: Science/Research

[options]
package_dir =
    = src/
packages = find:
python_requires = >=3.6
install_requires =
    prompt_toolkit
    pySerial
    pySerial-asyncio
    attrs
    bitstruct
    toolz
test_suite = tests
setup_requires =
    setuptools

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyNavSpark = NavSpark_console.main:main
